--- a/DapartmentChair/templates/admin-borrower-report.html
+++ b/DapartmentChair/templates/admin-borrower-report.html
@@ -6,77 +6,69 @@
 	<title>Document</title>
 
 	<style type="text/css">
+
+	
 		body {
-			display: flex;
-			justify-content: center;
-			align-items: center;
 			background-color: white;
+			margin: 0; /* Ensure no extra margin */
 		}
-		
+	
 		p {
 			margin: 0;
 			padding: 0;
 		}
 	
+		.ft10, .ft11, .ft12, .ft13, .ft14, .ft15 {
+			font-family: Times, serif;
+			color: #000000;
+		}
+	
 		.ft10 {
 			font-size: 12px;
-			font-family: Times;
-			color: #000000;
 		}
 	
 		.ft11 {
 			font-size: 12px;
-			font-family: Times;
-			color: #000000;
 		}
 	
 		.ft12 {
 			font-size: 13px;
-			font-family: Times;
-			color: #000000;
 		}
 	
 		.ft13 {
 			font-size: 14px;
-			font-family: Times;
-			color: #000000;
 		}
 	
 		.ft14 {
 			font-size: 11px;
-			font-family: Times;
-			color: #000000;
 		}
 	
 		.ft15 {
 			font-size: 12px;
 			line-height: 24px;
-			font-family: Times;
-			color: #000000;
 		}
 	
 		.table-container {
-			width: 100%; /* Adjust this value for the width */
-			height: auto; /* You can set a specific height if needed */
-			overflow-x: auto; /* Allows horizontal scroll on small screens */
+			width: 100%;
+			height: auto;
+			overflow-x: auto;
 			margin: 20px 0;
 		}
-		
-		/* Table styles */
+	
 		.custom-table {
-			height: auto; /* You can set specific height if needed */
+			width: 100%;
 			border-collapse: collapse;
 			font-family: Arial, sans-serif;
 			text-align: left;
 		}
-		
-		.custom-table th, .custom-table td {
-		
-			border: 1px solid black;
-		}
 	
-		
+		.custom-table th, .custom-table td {
+			border: 1px solid black;
+			padding: 8px;
+		}
 	</style>
+	
+	
 </head>
 <body>
 	
