--- a/faculty/templates/reservation-approval-status.html
+++ b/faculty/templates/reservation-approval-status.html
@@ -246,7 +246,7 @@ button:disabled {
                                             <p style="font-size: 15px; font-weight: 800;" class="text-dark">Items:</p>
                                         </div>
                                         <div class="col-3">
-                                            <p style="font-size: 15px; font-weight: 800;" class="text-dark">Description</p>
+                                            <p style="font-size: 15px; font-weight: 800;" class="text-dark">Item Details</p>
                                         </div>
                                         <div class="col-3">
                                             <p style="font-size: 15px; font-weight: 800;" class="text-dark">Quantity:</p>
