--- a/reservation/templates/reservation-edit.html
+++ b/reservation/templates/reservation-edit.html
@@ -477,7 +477,7 @@
                                                     </div>
                                         
                                                     <div class="mt-4">
-                                                        <label class="text-dark">Description</label>
+                                                        <label class="text-dark">Item Details (Optional)</label>
                                                         <textarea name="items[{{ forloop.counter0 }}][description]" style="height: 90px; resize: vertical;" class="form-control">{{ item.description }}</textarea>
                                                     </div>
                                         
