--- a/reservation/templates/reservation-register.html
+++ b/reservation/templates/reservation-register.html
@@ -137,7 +137,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label>NAME :</label>
+                                        <label>FULL NAME :</label>
                                         <input type="text" class="form-control" name="name" value="{{ request.POST.name }}" required>
                                     </div>
                                 </div>
