--- a/DapartmentChair/templates/admin-base.html
+++ b/DapartmentChair/templates/admin-base.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AdminLTE 3 | Dashboard 2</title>
+  <title>Borrowing System</title>
+
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/logo.png' %}">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
