--- a/DapartmentChair/templates/admin-reservation-status.html
+++ b/DapartmentChair/templates/admin-reservation-status.html
@@ -284,7 +284,7 @@
                                             <p style="font-size: 15px; font-weight: 800;">Items:</p>
                                         </div>
                                         <div class="col-3">
-                                            <p style="font-size: 15px; font-weight: 800;">Description</p>
+                                            <p style="font-size: 15px; font-weight: 800;">Item Details</p>
                                         </div>
                                         <div class="col-3">
                                             <p style="font-size: 15px; font-weight: 800;">Quantity:</p>
