--- a/reservation/templates/reservation-login.html
+++ b/reservation/templates/reservation-login.html
@@ -64,11 +64,7 @@
                 <span class="text-primary header-text" style="font-weight: 800;">&nbsp; Student Reservation Item</span>
             </a>
         </div>
-        <div class="login-menu">
-            <ul>
-                <li><a href="{% url 'home_redirect' %}" class="login-link">Faculty Login</a></li>
-            </ul>
-        </div>
+
     </div>
 </div>
 
@@ -183,6 +179,10 @@
 										<div class="input-group mb-2">
 											<a class="btn btn-outline-primary btn-lg btn-block" href="{% url 'reservation-register' %}">Register To Create Account</a>
 										</div>
+										<div class="input-group mb-0">
+											<p class="btn btn-outline-white btn-lg btn-block" data-color="#707373">Back to faculty <a href="{% url 'home_redirect' %}" class="text-primary">Login</a> </p>
+										</div>
+
 									</div>
 								</div>
 							</form>
